Fixed alignment issue with next button on landing page.

--- a/public/stylesheets/sass/landing.sass
+++ b/public/stylesheets/sass/landing.sass
@@ -85,9 +85,10 @@
 		a.next
 			position: absolute
 			top: 72%
-			left: 40%
+			left: 50%
 			width: 150px
 			height: 75px
+			margin-left: -100px
 			padding: 20px 25px 30px
 			@include rounded(10px)
 			background: #fff url(../images/arrowDownWhite.png) no-repeat 50% 80px
