--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -645,9 +645,10 @@ table {
     #landing ul#letter a.next {
       position: absolute;
       top: 72%;
-      left: 40%;
+      left: 50%;
       width: 150px;
       height: 75px;
+      margin-left: -75px;
       padding: 20px 25px 30px;
       -webkit-border-radius: 10px;
       -moz-border-radius: 10px;
